--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, h1, h2 {
+html, body {
   @apply font-mono;
+}
+body {
+  @apply dark:bg-slate-800 dark:text-slate-400;
 }
 
 /* COMPONENTS */
 /* Headers */
 h1, h2 {
-  @apply font-light;
-  @apply tracking-wide;
+  @apply font-light tracking-wide dark:text-slate-300;
 }
 
 h1 {
@@ -28,16 +30,9 @@ h2 {
 
 /* Primary */
 .btn-primary {
-  @apply bg-primary-900 text-white;
+  @apply bg-primary-900 text-white hover:bg-primary-600 dark:text-slate-300 dark:bg-slate-600 dark:hover:bg-slate-700;
 }
-.btn-primary:hover {
-  @apply bg-primary-500;
-}
-
 /* Secondary */
 .btn-secondary {
-  @apply border-b-2 border-primary-400 py-1 px-1;
-}
-.btn-secondary:hover {
-  @apply border-primary-900;
+  @apply border-b-2 border-primary-400 py-1 px-1 hover:border-primary-900 dark:text-slate-400 dark:border-slate-400 dark:hover:border-slate-500;
 }
