--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,10 @@ h2 {
 .btn-secondary {
   @apply border-b-2 border-primary-400 py-1 px-1 hover:border-primary-900 dark:text-slate-400 dark:border-slate-400 dark:hover:border-slate-500;
 }
+
+/* fixing display for react-icons */
+svg {
+  display: inline-block;
+  transform: translate(0px, -2px);
+  overflow: visible;
+}
