--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ h2 {
 }
 /* Secondary */
 .btn-secondary {
-  @apply border-b-2 border-primary-400 py-1 px-1 hover:border-primary-900 dark:text-slate-400 dark:border-slate-400 dark:hover:border-slate-500;
+  @apply border-b-2 border-primary-400 py-1 px-1 hover:bg-amber-400 hover:text-white hover:border-transparent dark:text-slate-400 dark:border-slate-400 dark:hover:bg-amber-600 dark:hover:text-slate-200 dark:hover:border-transparent;
 }
 
 /* fixing display for react-icons */
@@ -42,4 +42,21 @@ svg {
   display: inline-block;
   transform: translate(0px, -2px);
   overflow: visible;
+}
+
+.is-underlined {
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.is-underlined::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  bottom: 1px;
+  left: 0;
+  @apply bg-amber-300 dark:bg-amber-600;
+  clip-path: polygon(0% 3px, 100% 0%, 100% 100%, 0% 100%);
+  z-index: -1;
 }
