--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,20 @@ svg {
   clip-path: polygon(0% 3px, 100% 0%, 100% 100%, 0% 100%);
   z-index: -1;
 }
+
+.ipa-card, .ipa-card-clicked {
+  @apply select-none font-serif p-6 text-center bg-primary-700 text-white text-3xl dark:text-slate-300 dark:bg-slate-600;
+}
+
+.ipa-card {
+  @apply transition-colors hover:bg-primary-500 dark:hover:bg-slate-700 cursor-pointer
+}
+
+.ipa-card-clicked {
+  @apply bg-emerald-400 dark:bg-emerald-600;
+}
+
+.ipa-card-clicked-text {
+  @apply text-sm block h-0;
+}
+
